// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic style 1`] = `
"() => create(\\"div\\", {
  \\"className\\": \\"do_167\\"
}, \\"Hello World\\");

Styles.include(\`
	.do_167 { color: green }
\`);"
`;

exports[`basic style 2`] = `
"() => <div className=\\"do_167\\">Hello World</div>;

Styles.include(\`
	.do_167 { color: green }
\`);"
`;
